fix img not appearing error

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <canvas id="can"></canvas>
     <header>
         <h1 id="page_title" align="center">What do you want?</h1>
-        <img onclick="func()" class="img_center" id="lock_img" src="../Smaple Page/images/lock.png">
+        <img onclick="func()" class="img_center" id="lock_img" src="images/lock.png">
     </header>
 
     <footer>
